// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledDiv component render StyledDiv with a different background color 1`] = `
<div
  className="sc-bdVaJa kTBsKK"
>
  nice background color
</div>
`;

exports[`StyledDiv component render StyledDiv with a different border color 1`] = `
<div
  className="sc-bdVaJa fIeexc"
>
  nice border color
</div>
`;

exports[`StyledDiv component render StyledDiv with a different border radius 1`] = `
<div
  className="sc-bdVaJa lblMvb"
>
  ooh, curvy
</div>
`;

exports[`StyledDiv component render StyledDiv with a different border width 1`] = `
<div
  className="sc-bdVaJa eAUtwn"
>
  damn this border extra thicc
</div>
`;

exports[`StyledDiv component render StyledDiv with a different border width and border color 1`] = `
<div
  className="sc-bdVaJa hXJjeI"
>
  wooooaaaahhhh
</div>
`;

exports[`StyledDiv component render StyledDiv with a different width 1`] = `
<div
  className="sc-bdVaJa bNveZT"
  width="full"
>
  w i d e
</div>
`;

exports[`StyledDiv component render default StyledDiv as expected 1`] = `
<div
  className="sc-bdVaJa frronE"
>
  I have nothing to offer
</div>
`;
